outputs_20260325-024444-7dabf8e9/codegen/build_logs/compiler_stderr.log
In file included from C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\src\gtm_tom_3_phase_inverter_pwm.c:20:
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\include/IfxGtm_Tom_Timer.h:14:9: error: conflicting types for 'IfxGtm_Tom_Timer_init'; have 'boolean(IfxGtm_Tom_Timer *, const IfxGtm_Tom_Timer_Config *)' {aka 'unsigned char(IfxGtm_Tom_Timer *, const IfxGtm_Tom_Timer_Config *)'}
   14 | boolean IfxGtm_Tom_Timer_init(IfxGtm_Tom_Timer *driver, const IfxGtm_Tom_Timer_Config *config);
      |         ^~~~~~~~~~~~~~~~~~~~~
In file included from C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\include/IfxGtm_Tom_Timer.h:4:
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\include/IfxGtm_Tom.h:23:6: note: previous declaration of 'IfxGtm_Tom_Timer_init' with type 'void(void *, void *)'
   23 | void IfxGtm_Tom_Timer_init(void *driver, void *config);
      |      ^~~~~~~~~~~~~~~~~~~~~

C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\mocks\IfxGtm_Cmu.c:22:15: error: redefinition of 's_selectClkInput_count'
   22 | static uint32 s_selectClkInput_count = 0;
      |               ^~~~~~~~~~~~~~~~~~~~~~
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\mocks\IfxGtm_Cmu.c:7:15: note: previous definition of 's_selectClkInput_count' with type 'uint32' {aka 'unsigned int'}
    7 | static uint32 s_selectClkInput_count = 0;
      |               ^~~~~~~~~~~~~~~~~~~~~~
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\mocks\IfxGtm_Cmu.c:37:8: error: redefinition of 'IfxGtm_Cmu_Mock_GetCallCount_selectClkInput'
   37 | uint32 IfxGtm_Cmu_Mock_GetCallCount_selectClkInput(void) { return s_selectClkInput_count; }
      |        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\mocks\IfxGtm_Cmu.c:31:8: note: previous definition of 'IfxGtm_Cmu_Mock_GetCallCount_selectClkInput' with type 'uint32(void)' {aka 'unsigned int(void)'}
   31 | uint32 IfxGtm_Cmu_Mock_GetCallCount_selectClkInput(void) {
      |        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\mocks\IfxGtm_Pwm.c:122:15: error: redefinition of 's_index_count'
  122 | static uint32 s_index_count = 0;
      |               ^~~~~~~~~~~~~
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\mocks\IfxGtm_Pwm.c:120:15: note: previous definition of 's_index_count' with type 'uint32' {aka 'unsigned int'}
  120 | static uint32 s_index_count = 0;
      |               ^~~~~~~~~~~~~
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\mocks\IfxGtm_Pwm.c:135:8: error: redefinition of 'IfxGtm_Pwm_Mock_GetLastArg_updateChannelDutyImmediate_Mock_GetCallCount_index'
  135 | uint32 IfxGtm_Pwm_Mock_GetLastArg_updateChannelDutyImmediate_Mock_GetCallCount_index(void) {
      |        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\mocks\IfxGtm_Pwm.c:131:8: note: previous definition of 'IfxGtm_Pwm_Mock_GetLastArg_updateChannelDutyImmediate_Mock_GetCallCount_index' with type 'uint32(void)' {aka 'unsigned int(void)'}
  131 | uint32 IfxGtm_Pwm_Mock_GetLastArg_updateChannelDutyImmediate_Mock_GetCallCount_index(void) {
      |        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

In file included from C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\mocks\IfxGtm_Tom_Timer.c:1:
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\include/IfxGtm_Tom_Timer.h:14:9: error: conflicting types for 'IfxGtm_Tom_Timer_init'; have 'boolean(IfxGtm_Tom_Timer *, const IfxGtm_Tom_Timer_Config *)' {aka 'unsigned char(IfxGtm_Tom_Timer *, const IfxGtm_Tom_Timer_Config *)'}
   14 | boolean IfxGtm_Tom_Timer_init(IfxGtm_Tom_Timer *driver, const IfxGtm_Tom_Timer_Config *config);
      |         ^~~~~~~~~~~~~~~~~~~~~
In file included from C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\include/IfxGtm_Tom_Timer.h:4:
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\include/IfxGtm_Tom.h:23:6: note: previous declaration of 'IfxGtm_Tom_Timer_init' with type 'void(void *, void *)'
   23 | void IfxGtm_Tom_Timer_init(void *driver, void *config);
      |      ^~~~~~~~~~~~~~~~~~~~~
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\mocks\IfxGtm_Tom_Timer.c:33:9: error: conflicting types for 'IfxGtm_Tom_Timer_init'; have 'boolean(IfxGtm_Tom_Timer *, const IfxGtm_Tom_Timer_Config *)' {aka 'unsigned char(IfxGtm_Tom_Timer *, const IfxGtm_Tom_Timer_Config *)'}
   33 | boolean IfxGtm_Tom_Timer_init(IfxGtm_Tom_Timer *driver, const IfxGtm_Tom_Timer_Config *config)
      |         ^~~~~~~~~~~~~~~~~~~~~
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\include/IfxGtm_Tom.h:23:6: note: previous declaration of 'IfxGtm_Tom_Timer_init' with type 'void(void *, void *)'
   23 | void IfxGtm_Tom_Timer_init(void *driver, void *config);
      |      ^~~~~~~~~~~~~~~~~~~~~

In file included from C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\test\test_gtm_tom_3_phase_inverter_pwm.c:7:
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\include/IfxGtm_Tom_Timer.h:14:9: error: conflicting types for 'IfxGtm_Tom_Timer_init'; have 'boolean(IfxGtm_Tom_Timer *, const IfxGtm_Tom_Timer_Config *)' {aka 'unsigned char(IfxGtm_Tom_Timer *, const IfxGtm_Tom_Timer_Config *)'}
   14 | boolean IfxGtm_Tom_Timer_init(IfxGtm_Tom_Timer *driver, const IfxGtm_Tom_Timer_Config *config);
      |         ^~~~~~~~~~~~~~~~~~~~~
In file included from C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\include/IfxGtm_Tom_Timer.h:4:
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\include/IfxGtm_Tom.h:23:6: note: previous declaration of 'IfxGtm_Tom_Timer_init' with type 'void(void *, void *)'
   23 | void IfxGtm_Tom_Timer_init(void *driver, void *config);
      |      ^~~~~~~~~~~~~~~~~~~~~
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\test\test_gtm_tom_3_phase_inverter_pwm.c: In function 'test_updateGtmTom3phInvDuty_SingleCall_UpdatesValues':
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\test\test_gtm_tom_3_phase_inverter_pwm.c:103:19: error: void value not ignored as it ought to be
  103 |     uint32 idx0 = IfxGtm_Pwm_Mock_GetLastArg_updateChannelDutyImmediate_index(NULL, NULL, 0);
      |                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
C:\Users\extpedj\Desktop\infineon_POC_MVP\outputs_20260325-024444-7dabf8e9\6ee0b236-20b\Migrate_KIT_A2G_TC387_5V_TFT_TC387_3_phase_inver_r_20260325_105737\attempts\phase_002_build\test\test_gtm_tom_3_phase_inverter_pwm.c:112:19: error: void value not ignored as it ought to be
  112 |     uint32 idx1 = IfxGtm_Pwm_Mock_GetLastArg_updateChannelDutyImmediate_index(NULL, NULL, 0);
      |                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
